--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Tic-Tac-Toe</h1>
+    </header>
+
+    <div class="game-container">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+    </div>
+
+    <footer>
+        <a href="github.com/555Viktor">
+            Created by 555Viktor
+        </a>
+    </footer>
+
     <!-- JS -->
      <script src="./index.js"></script>
 </body>
