--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <footer>
-        <a href="github.com/555Viktor">
+        <a href="https://github.com/555Viktor">
             Created by 555Viktor
         </a>
     </footer>
