Style cell input

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <div class="game-container">
-        <div class="cell"></div>
+        <div class="cell">X</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
