Revert game result aspect

--- a/index.html
+++ b/index.html
@@ -11,22 +11,8 @@
         <h1>Tic-Tac-Toe</h1>
     </header>
 
-    <div class="game-results-container">
-        <div class="result-wins">
-
-        </div>
-
-        <div class="result-losses">
-
-        </div>
-
-        <div class="result-ties">
-            
-        </div>
-    </div>
-
     <div class="game-container">
-        <div class="cell">X</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
