Style header, organize code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="game-header">
         <h1>Tic-Tac-Toe</h1>
     </header>
 
@@ -23,8 +23,8 @@
         <div class="cell"></div>
     </div>
 
-    <footer>
-        <a href="https://github.com/555Viktor">
+    <footer class="game-footer">
+        <a href="https://github.com/555Viktor" class="footer-github">
             Created by 555Viktor
         </a>
     </footer>
