--- a/index.html
+++ b/index.html
@@ -13,17 +13,7 @@
         <h1>Tic-Tac-Toe</h1>
     </header>
 
-    <div class="game-container">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-    </div>
+    <div class="game-container"></div>
 
     <footer class="game-footer">
         <a href="https://github.com/555Viktor" class="footer-github">
