Add hmtl container for result msg

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <h1>Tic-Tac-Toe</h1>
     </header>
 
+    <div class="game-result-container">
+        <h2 id="game-result-msg"></h2>
+    </div>
+
     <div class="game-container"></div>
 
     <footer class="game-footer">
