--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <div class="game-result-container">
         <h2 id="game-result-msg"></h2>
+        <h3 id="game-restart-msg"></h3>
     </div>
 
     <div class="game-container"></div>
