--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </footer>
 
     <!-- JS -->
-     <script src="./index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
